# spotify-data-viewer

./: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.ui  spotifyalbum.cpp  spotifylibrary.cpp  spotifylibrary.h
spotify/: spotifyalbum.h  spotifyartist.cpp  spotifyartist.h  spotifydatabrowser.cpp  spotifydatabrowser.h  spotifydatabrowser.ui  spotifylibrary.cpp  spotifylibrary.h  spotifytrack.cpp  spotifytrack.h
widgets/: databrowserwidget.cpp  databrowserwidget.h  databrowserwidget.ui  libraryalbumsmodel.cpp  libraryalbumsmodel.h  libraryartistsmodel.cpp  libraryartistsmodel.h  librarybrowserwidget.cpp  librarybrowserwidget.h  librarybrowserwidget.ui  librarytracksmodel.cpp  librarytracksmodel.h  playlistbrowserwidget.cpp  playlistbrowserwidget.h  playlistbrowserwidget.ui
